feat(module): export public api in main module

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "description": "Angular2+ module for comparing text.",
   "main": "ngx-diff.bundle.js",
-  "module": "ngx-diff.module.js",
-  "jsnext:main": "ngx-diff.module.js",
-  "types": "ngx-diff.module.d.ts",
+  "module": "index.js",
+  "jsnext:main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
-    "build": "rm -rf dist && tsc -p tsconfig-esm.json && rollup -c rollup.config.js dist/ngx-diff.module.js > dist/ngx-diff.bundle.js && cp package.json dist && ngc && cp README.md dist && cp LICENSE.md dist",
+    "build": "npm run lint && rm -rf dist && tsc -p tsconfig-esm.json && rollup -c rollup.config.js dist/index.js > dist/ngx-diff.bundle.js && cp package.json dist && ngc && cp README.md dist && cp LICENSE.md dist",
     "test": "karma start --single-run",
     "lint": "tslint -c tslint.json 'src/**/*.ts' 'test/**/*.ts'",
     "release": "standard-version",
