fix: package name

--- a/projects/ngx-diff/package.json
+++ b/projects/ngx-diff/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pat/ngx-diff",
+  "name": "ngx-diff",
   "version": "0.1.1",
   "peerDependencies": {
     "@angular/common": "^9.0.0",
