refactor: double to single quotes; update dependencies to latest angular; add inline component to public api export

--- a/projects/ngx-diff/package.json
+++ b/projects/ngx-diff/package.json
@@ -2,9 +2,10 @@
   "name": "ngx-diff",
   "version": "0.1.1",
   "peerDependencies": {
-    "@angular/common": "^9.0.0",
-    "@angular/core": "^9.0.0",
-    "tslib": "^1.10.0"
+    "@angular/common": ">=9.0.0",
+    "@angular/core": ">=9.0.0",
+    "tslib": "^1.10.0",
+    "diff-match-patch-ts": ">=0.2.0"
   },
   "dependencies": {
     "diff-match-patch-ts": "^0.2.0"
