--- a/projects/ngx-diff/package.json
+++ b/projects/ngx-diff/package.json
@@ -9,5 +9,20 @@
   },
   "dependencies": {
     "diff-match-patch-ts": "^0.2.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rars/ngx-diff"
+  },
+  "keywords": [
+    "Angular2",
+    "ng2",
+    "diff"
+  ],
+  "author": "Richard Russell",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/rars/ngx-diff/issues"
+  },
+  "homepage": "https://github.com/rars/ngx-diff#readme"
 }
