refactor: add karma firefox launcher

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
+    "build": "ng build ngx-jwt --prod",
+    "test": "ng test ngx-jwt",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -39,6 +39,7 @@
     "karma": "~4.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "ng-packagr": "^9.0.0",
