refactor: update demo to angular 9

--- a/package.json
+++ b/package.json
@@ -13,35 +13,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular/animations": "9.0.1",
+    "@angular/common": "9.0.1",
+    "@angular/compiler": "9.0.1",
+    "@angular/core": "9.0.1",
+    "@angular/forms": "9.0.1",
+    "@angular/platform-browser": "9.0.1",
+    "@angular/platform-browser-dynamic": "9.0.1",
+    "@angular/router": "9.0.1",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "diff-match-patch-ts": "^0.2.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "ngx-diff": "^0.1.0",
+    "ngx-diff": "^0.2.0",
     "popper.js": "^1.12.9",
-    "rxjs": "^5.1.0",
+    "rxjs": "^6.5.4",
     "simple-line-icons": "^2.4.1",
-    "zone.js": "^0.8.4"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.5",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
+    "@angular-devkit/build-angular": "~0.900.2",
+    "@angular/cli": "9.0.2",
+    "@angular/compiler-cli": "9.0.1",
+    "@angular/language-service": "9.0.1",
     "@commitlint/cli": "^6.0.2",
     "@commitlint/config-conventional": "^6.0.2",
     "@types/jasmine": "2.5.45",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "cz-conventional-changelog": "^2.1.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
@@ -54,7 +55,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.6.0"
+    "typescript": "3.7.5"
   },
   "config": {
     "commitizen": {
