--- a/projects/ngx-diff/package.json
+++ b/projects/ngx-diff/package.json
@@ -4,11 +4,11 @@
   "peerDependencies": {
     "@angular/common": ">=9.0.0",
     "@angular/core": ">=9.0.0",
-    "tslib": "^1.10.0",
     "diff-match-patch-ts": ">=0.2.0"
   },
   "dependencies": {
-    "diff-match-patch-ts": "^0.2.0"
+    "diff-match-patch-ts": "^0.2.0",
+    "tslib": "^2.0.0"
   },
   "repository": {
     "type": "git",
