--- a/projects/ngx-diff/package.json
+++ b/projects/ngx-diff/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-diff",
-  "version": "0.2.0",
+  "version": "0.3.0-rc.0",
   "peerDependencies": {
     "@angular/common": ">=9.0.0",
     "@angular/core": ">=9.0.0",
