--- a/package.json
+++ b/package.json
@@ -21,28 +21,28 @@
     "@angular/platform-browser": "9.0.1",
     "@angular/platform-browser-dynamic": "9.0.1",
     "@angular/router": "9.0.1",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^4.5.3",
     "core-js": "^2.4.1",
     "diff-match-patch-ts": "^0.2.0",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.3.1",
-    "ngx-diff": "^0.2.0",
+    "jquery": "^3.5.1",
+    "ngx-diff": "^0.3.0-rc.0",
     "popper.js": "^1.12.9",
-    "rxjs": "^6.5.4",
-    "simple-line-icons": "^2.4.1",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "rxjs": "^6.6.3",
+    "simple-line-icons": "^2.5.5",
+    "tslib": "^1.14.1",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.2",
+    "@angular-devkit/build-angular": "^0.900.7",
     "@angular/cli": "9.0.2",
     "@angular/compiler-cli": "9.0.1",
     "@angular/language-service": "9.0.1",
     "@commitlint/cli": "^6.0.2",
     "@commitlint/config-conventional": "^6.0.2",
     "@types/jasmine": "2.5.45",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "@types/node": "^12.19.4",
+    "codelyzer": "^5.2.2",
     "cz-conventional-changelog": "^2.1.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
