--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.1.12",
-    "@angular/common": "9.1.12",
-    "@angular/compiler": "9.1.12",
-    "@angular/core": "9.1.12",
-    "@angular/forms": "9.1.12",
-    "@angular/platform-browser": "9.1.12",
-    "@angular/platform-browser-dynamic": "9.1.12",
-    "@angular/router": "9.1.12",
+    "@angular/animations": "10.2.3",
+    "@angular/common": "10.2.3",
+    "@angular/compiler": "10.2.3",
+    "@angular/core": "10.2.3",
+    "@angular/forms": "10.2.3",
+    "@angular/platform-browser": "10.2.3",
+    "@angular/platform-browser-dynamic": "10.2.3",
+    "@angular/router": "10.2.3",
     "bootstrap": "^4.5.3",
     "core-js": "^2.4.1",
     "diff-match-patch-ts": "^0.2.0",
@@ -30,32 +30,32 @@
     "popper.js": "^1.12.9",
     "rxjs": "^6.6.3",
     "simple-line-icons": "^2.5.5",
-    "tslib": "^1.14.1",
+    "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.12",
-    "@angular/cli": "9.1.12",
-    "@angular/compiler-cli": "9.1.12",
-    "@angular/language-service": "9.1.12",
+    "@angular-devkit/build-angular": "^0.1002.0",
+    "@angular/cli": "10.2.0",
+    "@angular/compiler-cli": "10.2.3",
+    "@angular/language-service": "10.2.3",
     "@commitlint/cli": "^6.0.2",
     "@commitlint/config-conventional": "^6.0.2",
     "@types/jasmine": "2.5.45",
     "@types/node": "^12.19.4",
     "codelyzer": "^5.2.2",
     "cz-conventional-changelog": "^2.1.0",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
-    "typescript": "3.7.5"
+    "tslint": "~6.1.0",
+    "typescript": "4.0.5"
   },
   "config": {
     "commitizen": {
