--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "10.2.3",
-    "@angular/common": "10.2.3",
-    "@angular/compiler": "10.2.3",
-    "@angular/core": "10.2.3",
-    "@angular/forms": "10.2.3",
-    "@angular/platform-browser": "10.2.3",
-    "@angular/platform-browser-dynamic": "10.2.3",
-    "@angular/router": "10.2.3",
+    "@angular/animations": "11.0.0",
+    "@angular/common": "11.0.0",
+    "@angular/compiler": "11.0.0",
+    "@angular/core": "11.0.0",
+    "@angular/forms": "11.0.0",
+    "@angular/platform-browser": "11.0.0",
+    "@angular/platform-browser-dynamic": "11.0.0",
+    "@angular/router": "11.0.0",
     "bootstrap": "^4.5.3",
     "core-js": "^2.4.1",
     "diff-match-patch-ts": "^0.2.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
-    "ngx-diff": "^0.3.0-rc.0",
+    "ngx-diff": "^0.4.0-rc.0",
     "popper.js": "^1.12.9",
     "rxjs": "^6.6.3",
     "simple-line-icons": "^2.5.5",
@@ -34,19 +34,19 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1002.0",
-    "@angular/cli": "10.2.0",
-    "@angular/compiler-cli": "10.2.3",
-    "@angular/language-service": "10.2.3",
+    "@angular-devkit/build-angular": "^0.1100.1",
+    "@angular/cli": "11.0.1",
+    "@angular/compiler-cli": "11.0.0",
+    "@angular/language-service": "11.0.0",
     "@commitlint/cli": "^6.0.2",
     "@commitlint/config-conventional": "^6.0.2",
-    "@types/jasmine": "2.5.45",
+    "@types/jasmine": "~3.6.0",
     "@types/node": "^12.19.4",
-    "codelyzer": "^5.2.2",
+    "codelyzer": "^6.0.0",
     "cz-conventional-changelog": "^2.1.0",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~5.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "~3.0.2",
