--- a/projects/ngx-diff/package.json
+++ b/projects/ngx-diff/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ngx-diff",
-  "version": "0.4.0-rc.0",
+  "version": "0.4.0",
   "peerDependencies": {
-    "@angular/common": ">=10.0.0",
-    "@angular/core": ">=10.0.0",
+    "@angular/common": ">=11.0.0",
+    "@angular/core": ">=11.0.0",
     "diff-match-patch-ts": ">=0.2.0"
   },
   "dependencies": {
