--- a/package.json
+++ b/package.json
@@ -27,21 +27,21 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.0",
     "@angular-devkit/core": "^13.3.0",
-    "@angular-eslint/builder": "13.1.0",
-    "@angular-eslint/eslint-plugin": "1.2.0",
-    "@angular-eslint/eslint-plugin-template": "1.2.0",
-    "@angular-eslint/schematics": "1.2.0",
-    "@angular-eslint/template-parser": "1.2.0",
+    "@angular-eslint/builder": "^12.0.0",
+    "@angular-eslint/eslint-plugin": "^12.0.0",
+    "@angular-eslint/eslint-plugin-template": "^12.0.0",
+    "@angular-eslint/schematics": "13.1.0",
+    "@angular-eslint/template-parser": "^12.0.0",
     "@angular/cli": "^13.3.0",
     "@angular/compiler-cli": "^13.3.0",
     "@angular/language-service": "^13.3.0",
     "@types/jasmine": "^3.6.9",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^16.11.26",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
+    "eslint": "^8.2.0",
+    "eslint-plugin-import": "2.25.2",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "~3.6.0",
