--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "^13.3.0",
     "@angular/platform-browser-dynamic": "^13.3.0",
     "@angular/router": "^13.3.0",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "diff-match-patch-ts": "^0.2.0",
     "rxjs": "~6.5.4",
+    "standard-version": "^9.3.2",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
@@ -44,6 +47,7 @@
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-jsdoc": "38.0.6",
     "eslint-plugin-prefer-arrow": "1.2.3",
+    "husky": "^7.0.4",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "~6.3.17",
@@ -56,5 +60,12 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "^4.3.5"
+  },
+  "standard-version": {
+    "skip": {
+      "commit": true,
+      "tag": true,
+      "bump": true
+    }
   }
 }
