--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "ngx-diff",
-  "version": "0.4.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build ngx-diff --configuration production",
     "test": "ng test ngx-diff",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "release": "standard-version"
   },
   "private": true,
   "dependencies": {
