feat(ngx-diff): update to Angular 14

--- a/projects/ngx-diff/package.json
+++ b/projects/ngx-diff/package.json
@@ -2,8 +2,8 @@
   "name": "ngx-diff",
   "version": "1.0.0",
   "peerDependencies": {
-    "@angular/common": ">=13.0.0",
-    "@angular/core": ">=13.0.0",
+    "@angular/common": ">=14.0.0",
+    "@angular/core": ">=14.0.0",
     "diff-match-patch-ts": ">=0.2.0"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
   },
   "keywords": [
     "Angular2",
+    "Angular",
     "ng2",
     "diff"
   ],
