--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build ngx-diff --configuration production",
-    "test": "ng test ngx-diff",
+    "test": "ng test ngx-diff --no-watch",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "release": "standard-version"
