--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,13 @@
 {
   "singleQuote": true,
-  "printWidth": 100
+  "printWidth": 100,
+  "importOrder": [
+    "^@angular/(.*)$",
+    "^@(.*)/(.*)$",
+    "^[./]"
+  ],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true,
+  "trailingComma": "all",
+  "importOrderParserPlugins": ["typescript", "decorators-legacy"]
 }
