--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/cli": "^14.2.11",
     "@angular/compiler-cli": "^14.3.0",
     "@angular/language-service": "^14.3.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/jasmine": "^3.6.9",
     "@types/jasminewd2": "~2.0.3",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
@@ -57,6 +58,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
     "ng-packagr": "^14.2.2",
+    "prettier": "^2.8.8",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "^4.3.5"
