--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,24 +14,13 @@
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "strictBindCallApply": true,
-    "strictFunctionTypes": true,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": true,
+    "strict": true,
     "importHelpers": true,
     "target": "ES2022",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2018", "dom"],
     "paths": {
-      "ngx-diff": [
-        "dist/ngx-diff/ngx-diff",
-        "dist/ngx-diff"
-      ]
+      "ngx-diff": ["dist/ngx-diff/ngx-diff", "dist/ngx-diff"]
     },
     "useDefineForClassFields": false
   },
