--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-diff",
-  "version": "6.0.1",
+  "version": "7.0.0-alpha.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
