--- a/projects/ngx-diff/package.json
+++ b/projects/ngx-diff/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-diff",
-  "version": "6.0.1",
+  "version": "7.0.0-alpha.0",
   "peerDependencies": {
     "@angular/common": ">=17.0.0",
     "@angular/core": ">=17.0.0",
