--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "13.3.0",
-    "@angular/common": "13.3.0",
-    "@angular/compiler": "13.3.0",
-    "@angular/core": "13.3.0",
-    "@angular/forms": "13.3.0",
-    "@angular/platform-browser": "13.3.0",
-    "@angular/platform-browser-dynamic": "13.3.0",
-    "@angular/router": "13.3.0",
+    "@angular/animations": "^13.4.0",
+    "@angular/common": "^13.4.0",
+    "@angular/compiler": "^13.4.0",
+    "@angular/core": "^13.4.0",
+    "@angular/forms": "^13.4.0",
+    "@angular/platform-browser": "^13.4.0",
+    "@angular/platform-browser-dynamic": "^13.4.0",
+    "@angular/router": "^13.4.0",
     "bootstrap": "^4.5.3",
     "core-js": "^2.4.1",
     "diff-match-patch-ts": "^0.2.0",
@@ -34,10 +34,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.0",
-    "@angular/cli": "13.3.0",
-    "@angular/compiler-cli": "13.3.0",
-    "@angular/language-service": "13.3.0",
+    "@angular-devkit/build-angular": "^13.3.11",
+    "@angular/cli": "^13.3.11",
+    "@angular/compiler-cli": "^13.4.0",
+    "@angular/language-service": "^13.4.0",
     "@commitlint/cli": "^6.0.2",
     "@commitlint/config-conventional": "^6.0.2",
     "@types/jasmine": "~3.6.0",
