--- a/projects/ngx-diff/package.json
+++ b/projects/ngx-diff/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ngx-diff",
-  "version": "7.0.0-alpha.1",
+  "version": "7.0.0",
   "peerDependencies": {
     "@angular/common": ">=17.0.0",
     "@angular/core": ">=17.0.0",
-    "diff-match-patch-ts": ">=0.3.0"
+    "diff-match-patch-ts": ">=0.4.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
