chore: update packages

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
-    "diff-match-patch-ts": "^0.4.0-rc.1",
-    "ngx-diff": "^7.0.0-alpha.1",
+    "diff-match-patch-ts": "^0.4.0",
+    "ngx-diff": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
