fix(ngx-diff): add styles to exports of package.json
Fixes [#78](https://github.com/rars/ngx-diff/issues/78)

--- a/projects/ngx-diff/package.json
+++ b/projects/ngx-diff/package.json
@@ -23,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/rars/ngx-diff/issues"
   },
-  "homepage": "https://github.com/rars/ngx-diff#readme"
+  "homepage": "https://github.com/rars/ngx-diff#readme",
+  "exports": {
+    "./styles/": "./styles/"
+  }
 }
