fix(ngx-diff): avoid directory export for style CSS

--- a/projects/ngx-diff/package.json
+++ b/projects/ngx-diff/package.json
@@ -25,6 +25,8 @@
   },
   "homepage": "https://github.com/rars/ngx-diff#readme",
   "exports": {
-    "./styles/": "./styles/"
+    "./styles/*": {
+      "style": "./styles/*.css"
+    }
   }
 }
