--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-diff",
-  "version": "10.0.0",
+  "version": "11.0.0",
   "type": "module",
   "scripts": {
     "ng": "ng",
@@ -13,14 +13,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.14",
-    "@angular/common": "^19.2.14",
-    "@angular/compiler": "^19.2.14",
-    "@angular/core": "^19.2.14",
-    "@angular/forms": "^19.2.14",
-    "@angular/platform-browser": "^19.2.14",
-    "@angular/platform-browser-dynamic": "^19.2.14",
-    "@angular/router": "^19.2.14",
+    "@angular/animations": "^20.0.1",
+    "@angular/common": "^20.0.1",
+    "@angular/compiler": "^20.0.1",
+    "@angular/core": "^20.0.1",
+    "@angular/forms": "^20.0.1",
+    "@angular/platform-browser": "^20.0.1",
+    "@angular/platform-browser-dynamic": "^20.0.1",
+    "@angular/router": "^20.0.1",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "diff-match-patch-ts": "^0.6.0",
@@ -30,22 +30,22 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.14",
-    "@angular-devkit/core": "^19.2.14",
-    "@angular-eslint/builder": "^19.6.0",
-    "@angular-eslint/eslint-plugin": "^19.6.0",
-    "@angular-eslint/eslint-plugin-template": "^19.6.0",
-    "@angular-eslint/schematics": "19.6.0",
-    "@angular-eslint/template-parser": "^19.6.0",
-    "@angular/cli": "^19.2.14",
-    "@angular/compiler-cli": "^19.2.14",
-    "@angular/language-service": "^19.2.14",
+    "@angular-devkit/core": "^20.0.1",
+    "@angular-eslint/builder": "^20.0.0",
+    "@angular-eslint/eslint-plugin": "^20.0.0",
+    "@angular-eslint/eslint-plugin-template": "^20.0.0",
+    "@angular-eslint/schematics": "20.0.0",
+    "@angular-eslint/template-parser": "^20.0.0",
+    "@angular/build": "^20.0.1",
+    "@angular/cli": "^20.0.1",
+    "@angular/compiler-cli": "^20.0.1",
+    "@angular/language-service": "^20.0.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jasmine": "^5.1.8",
     "@types/jasminewd2": "~2.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.33.0",
-    "@typescript-eslint/parser": "^8.33.0",
-    "eslint": "^9.27.0",
+    "@typescript-eslint/eslint-plugin": "^8.33.1",
+    "@typescript-eslint/parser": "^8.33.1",
+    "eslint": "^9.28.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsdoc": "50.6.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
@@ -58,7 +58,7 @@
     "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
-    "ng-packagr": "^19.2.2",
+    "ng-packagr": "^20.0.0",
     "prettier": "^3.5.3",
     "typescript": "^5.8.3"
   },
