--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "diff-match-patch-ts": "^0.6.0",
     "rxjs": "~7.8.2",
     "standard-version": "^9.3.2",
-    "tslib": "^2.3.1",
-    "zone.js": "~0.15.1"
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@angular-devkit/core": "^20.3.8",
