--- a/package.json
+++ b/package.json
@@ -21,11 +21,8 @@
     "@angular/platform-browser": "^21.0.0",
     "@angular/platform-browser-dynamic": "^21.0.0",
     "@angular/router": "^21.0.0",
-    "@commitlint/cli": "^20.1.0",
-    "@commitlint/config-conventional": "^20.0.0",
     "diff-match-patch-ts": "^0.7.0",
     "rxjs": "~7.8.2",
-    "standard-version": "^9.3.2",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
@@ -39,9 +36,9 @@
     "@angular/cli": "^21.0.0",
     "@angular/compiler-cli": "^21.0.0",
     "@angular/language-service": "^21.0.0",
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
     "@trivago/prettier-plugin-sort-imports": "^6.0.0",
-    "@types/jasmine": "^5.1.13",
-    "@types/jasminewd2": "~2.0.3",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
     "eslint": "^9.28.0",
@@ -49,17 +46,12 @@
     "eslint-plugin-jsdoc": "61.4.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "husky": "^9.0.11",
-    "jasmine-core": "~5.12.1",
-    "jasmine-spec-reporter": "^7.0.0",
-    "karma": "~6.4.2",
-    "karma-chrome-launcher": "^3.1.1",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-firefox-launcher": "^2.1.2",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "^2.0.0",
+    "jsdom": "^27.2.0",
     "ng-packagr": "^21.0.0",
     "prettier": "^3.5.3",
-    "typescript": "^5.8.3"
+    "standard-version": "^9.3.2",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.13"
   },
   "standard-version": {
     "skip": {
