--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,34 +2,41 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "esModuleInterop": true,
-    "declaration": false,
     "experimentalDecorators": true,
-    "module": "es2020",
-    "moduleResolution": "bundler",
+    "importHelpers": true,
+    "isolatedModules": true,
+    "module": "preserve",
+    "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
+    "noPropertyAccessFromIndexSignature": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "outDir": "./dist/out-tsc",
+    "skipLibCheck": true,
+    "sourceMap": true,
     "strict": true,
-    "importHelpers": true,
     "target": "ES2022",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
     "paths": {
-      "ngx-diff": [
-        "dist/ngx-diff/ngx-diff",
-        "dist/ngx-diff"
-      ]
-    },
-    "useDefineForClassFields": false
+      "ngx-diff": ["dist/ngx-diff"]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
-  }
+    "strictInjectionParameters": true,
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictInputAccessModifiers": true,
+    "strictTemplates": true
+  },
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
+    },
+    { "path": "./projects/ngx-diff/tsconfig.lib.json" },
+    { "path": "./projects/ngx-diff/tsconfig.spec.json" }
+  ]
 }
