--- a/projects/ngx-diff/tsconfig.lib.json
+++ b/projects/ngx-diff/tsconfig.lib.json
@@ -12,8 +12,5 @@
     "strictMetadataEmit": true,
     "enableResourceInlining": true
   },
-  "exclude": [
-    "src/test.ts",
-    "**/*.spec.ts"
-  ]
+  "exclude": ["**/*.spec.ts"]
 }
