--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "diff-match-patch-ts": "^0.7.0",
     "ngx-diff": "^13.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.1"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^21.0.0",
